# CanDevStudio

./: .travis.yml  CMakeLists.txt
src/common/: CMakeLists.txt  component.cpp  component.h
src/common/eventhandlers/: canframe.h
src/components/: CMakeLists.txt  candevice.cpp  candevice.h  candevice_p.h  socketcan.cpp  socketcan.h
src/components/candevice/: CMakeLists.txt
tests/: CMakeLists.txt  socketcan_test.cpp
travis/: build.sh
